ft(search functionality): user should search request and approval based on userId, reques ID, request status, reasons, origin and destination [Finishes #170766100]
